--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -116,6 +116,20 @@
     "# This will convert 200 minutes to hours by dividing by 60\n",
     "200 / 60"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3c0bab6",
+   "metadata": {},
+   "source": [
+    "## Oussama EL WAZANI"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20077056",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
