--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -122,7 +122,8 @@
    "id": "d3c0bab6",
    "metadata": {},
    "source": [
-    "## Oussama EL WAZANI"
+    "## Author(s)\n",
+    "Oussama EL WAZANI"
    ]
   },
   {
